Completed left box alignment and styling

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 	<body>
 		<main>
 			<div class="left-container">
-				<div class="logo">ODIN</div>
-				<div class="credit">Photo by</div>
+				<div class="logoContainer">
+					<img class="odinLogo" src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"
+					/>
+					<div class="logoText">ODIN</div>
+				</div>
+				<div class="credit">Photo by <a href="https://unsplash.com/photos/75xPHEQBmvA">Jean-Philippe Delberghe</a> on Unsplash</div>
 			</div>
 			<div class="right-container">
 				<div class="form-description">
