Finalized styling and layout

--- a/index.html
+++ b/index.html
@@ -9,66 +9,92 @@
 	</head>
 	<body>
 		<main>
-			<div class="left-container">
+			<div class="leftContainer">
 				<div class="logoContainer">
-					<img class="odinLogo" src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"
+					<img
+						class="odinLogo"
+						src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"
 					/>
 					<div class="logoText">ODIN</div>
 				</div>
-				<div class="credit">Photo by <a href="https://unsplash.com/photos/75xPHEQBmvA">Jean-Philippe Delberghe</a> on Unsplash</div>
-			</div>
-			<div class="right-container">
-				<div class="form-description">
-					<p>
-						This is not a real online service! You know you need something like
-						this in your life to help you realize your deepest dreams. Sign up
-						<em>now</em> to get started.
-					</p>
-					<p>You <em>know</em> you want to.</p>
+				<div class="credit">
+					Photo by
+					<a href="https://unsplash.com/photos/75xPHEQBmvA"
+						>Jean-Philippe Delberghe</a
+					>
+					on Unsplash
 				</div>
-				<form action="example.com/path" method="post">
-					<div>
-						<label for="first_name">
-							First name:
-							<input type="text" id="first_name" name="first_name" />
-						</label>
-						<label for="lasst_name">
-							Last name:
-							<input type="text" id="last_name" name="last_name" />
-						</label>
+			</div>
+			<div class="rightContainer">
+				<div class="rightContent">
+					<div class="formDescription">
+						<p>
+							This is not a real online service! You know you need something
+							like this in your life to help you realize your deepest dreams.
+							Sign up
+							<em>now</em> to get started.
+						</p>
+						<p class="two">You <em>know</em> you want to.</p>
 					</div>
-					<div>
-						<label for="email">
-							Email:
-							<input type="email" id="user_email" name="email" />
-						</label>
-						<label for="phone_number">
-							Phone number:
-							<input
-								type="phone_number"
-								id="phone_number"
-								name="phone_number"
-							/>
-						</label>
+					<div class="formContainer">
+						<form action="example.com/path" method="post">
+							<div class="shadowContainer">
+								<h2>Let's do this!</h2>
+								<div>
+									<label for="first_name">
+										First name:<br />
+										<input type="text" id="first_name" name="first_name" />
+									</label>
+								</div>
+								<div>
+									<label for="lasst_name">
+										Last name:<br />
+										<input type="text" id="last_name" name="last_name" />
+									</label>
+								</div>
+								<div>
+									<label for="email">
+										Email: <br />
+										<input type="email" id="user_email" name="email" />
+									</label>
+								</div>
+								<div>
+									<label for="phone_number">
+										Phone number:<br />
+										<input
+											type="phone_number"
+											id="phone_number"
+											name="phone_number"
+										/>
+									</label>
+								</div>
+								<div>
+									<label for="password">
+										Password:<br />
+										<input type="password" id="user_password" name="password" />
+									</label>
+								</div>
+								<div>
+									<label for="confirm_password">
+										Confirm password:<br />
+										<input
+											type="confirm_password"
+											id="confirm_password"
+											name="confirm_password"
+										/>
+									</label>
+								</div>
+							</div>
+							<div class="formFooter">
+								<div id="buttonContainer">
+									<button type="submit">Create Account</button>
+								</div>
+								<div class="existingAccount">
+									Already have an account? <a href="">Log in</a>
+								</div>
+							</div>
+						</form>
 					</div>
-					<div>
-						<label for="password">
-							password:
-							<input type="password" id="user_password" name="password" />
-						</label>
-						<label for="confirm_password">
-							Confirm password:
-							<input
-								type="confirm_password"
-								id="confirm_password"
-								name="confirm_password"
-							/>
-						</label>
-					</div>
-					<button type="submit">Create Account</button>
-				</form>
-				<div class="existingAccount">
-					Already have an account? <a href="">Log in</a>
 				</div>
 			</div>
 		</main>
