Stopped form from submitting using event.preventDefault()

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<p class="two">You <em>know</em> you want to.</p>
 					</div>
 					<div class="formContainer">
-						<form action="example.com/path" method="post" novalidate>
+						<form onsubmit="event.preventDefault()" method="post" novalidate>
 							<div class="shadowContainer">
 								<h2>Let's do this!</h2>
 								<div class="gridContainer">
