Implemented popup window, button behavior, and form reset

--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
 									</label>
 								</div>
 							</div>
-
+							<div class="popup">
+								<h2>Thank you for your form submission</h2>
+								<button class="close">Close</button>
+							</div>
 							<div class="formFooter">
 								<div id="buttonContainer">
 									<button type="submit">Create Account</button>
@@ -109,6 +112,6 @@
 				</div>
 			</div>
 		</main>
-		<script src="passwordValidation.js"></script>
+		<script src="sign-up-form.js"></script>
 	</body>
 </html>
