- Updated README.md - Added footer - Fixed CSS flexbox layout - Refined form validation logic in JS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Project-Sign-Up-Form</title>
 		<link href="style.css" rel="stylesheet" />
 	</head>
 	<body>
@@ -41,7 +41,7 @@
 							id="form"
 							onsubmit="event.preventDefault()"
 							action="#"
-							method="get"
+							method="post"
 						>
 							<div class="shadowContainer">
 								<h2>Let's do this!</h2>
@@ -120,6 +120,6 @@
 				</div>
 			</div>
 		</main>
-		<script src="sign-up-form.js"></script>
-	</body>
+	</body>	
+	<script src="sign-up-form.js"></script>
 </html>
